--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -25,6 +25,8 @@ jobs:
       run: |
         mkdir -p database
         touch database/database.sqlite
+    - name: copy .env
+      run: cp .env.ci .env
     - name: migration
       run: php artisan migrate
     - name: Execute tests (Unit and Feature tests) via PHPUnit
