Clear cache to apply env

--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -21,6 +21,8 @@ jobs:
       run: cp .env.ci .env
     - name: Generate key
       run: php artisan key:generate
+    - name: clear cache
+      run: php artisan config:cache
     - name: Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
     - name: Create Database
