--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -19,10 +19,8 @@ jobs:
       run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
     - name: copy .env
       run: cp .env.ci .env
-    - name: Generate key
-      run: php artisan key:generate
-    - name: clear cache
-      run: php artisan config:cache
+    - name: Generate key and set to .env
+      run: sh writeAppKey.sh
     - name: debug print .env
       run: cat .env
     - name: Directory Permissions
