--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -11,6 +11,24 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    services:
+      mysql:
+        image: mysql:8.0.19
+        ports:
+          - 3306:3306
+        options: --health-cmd "mysqladmin ping -h localhost" --health-interval 20s --health-timeout 10s --health-retries 10
+        env:
+          MYSQL_ROOT_PASSWORD: password
+          MYSQL_DATABASE: testdatabase
+
+      env:
+        DB_CONNECTION: mysql
+        DB_HOST: 127.0.0.1
+        DB_PORT: 3306
+        DB_DATABASE: testdatabase
+        DB_USERNAME: root
+        DB_PASSWORD: password
+
     steps:
     - uses: actions/checkout@v2
     - name: Copy .env
