--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -19,7 +19,7 @@ jobs:
         options: --health-cmd "mysqladmin ping -h localhost" --health-interval 20s --health-timeout 10s --health-retries 10
         env:
           MYSQL_ROOT_PASSWORD: password
-          MYSQL_DATABASE: testdatabase
+          MYSQL_DATABASE: hokuma_friends
 
     steps:
     - uses: actions/checkout@v2
@@ -35,14 +35,14 @@ jobs:
         echo "APP_KEY=$key" >> .env
     - name: Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
-    - name: Create Database
-      run: |
-        mkdir -p database
-        touch database/database.sqlite
     - name: migration
       run: yes | php artisan migrate
     - name: Execute tests (Unit and Feature tests) via PHPUnit
       env:
-        DB_CONNECTION: sqlite
-        DB_DATABASE: database/database.sqlite
+        DB_CONNECTION: mysql
+        DB_HOST: 127.0.0.1
+        DB_PORT: 3306
+        DB_DATABASE: hokuma_friends
+        DB_USERNAME: root
+        DB_PASSWORD: password
       run: vendor/bin/phpunit
