--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,8 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Packages\\": "packages/"
         },
         "classmap": [
             "database/seeds",
