--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -26,7 +26,9 @@ jobs:
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
     - name: Install Dependencies
-      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+      run: |
+        composer update
+        composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
     - name: copy .env
       run: cp .env.ci .env
     - name: Generate key and set to .env
