--- a/composer.json
+++ b/composer.json
@@ -8,16 +8,14 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.2.5",
-        "bref/bref": "^0.5.31",
-        "bref/laravel-bridge": "^0.2.2",
+        "php": "^8.0",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.24",
         "laravel/socialite": "^5.1",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "2.4.1",
+        "laravel/ui": "^2.4.1",
         "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
